--- a/packs.html
+++ b/packs.html
@@ -218,12 +218,12 @@
     <div class="tag-bar">
         <a href="#" class="tag"><strike style="color: red;">Bedrock Edition</strike></a>
         <a href="#" class="tag">Custom Sky</a>
-        <a href="#" class="tag">FPS</a>
-        <a href="#" class="tag">Fully Custom</a>
-        <a href="#" class="tag">PvP</a>
-        <a href="#" class="tag">Red</a>
-        <a href="#" class="tag">Gold</a>
-        <a href="#" class="tag">Yellow</a>
+        <a href="#" class="tag">16x</a>
+        <a href="#" class="tag">64x</a>
+        <a href="#" class="tag">128x</a>
+        <a href="#" class="tag">256x</a>
+        <a href="#" class="tag">512x</a>
+        <a href="#" class="tag">1024x</a>
     </div>
 
     <!-- Resource Pack Card -->
